--- a/FRONT/src/app/user-empotage/user-empotage.html
+++ b/FRONT/src/app/user-empotage/user-empotage.html
@@ -47,48 +47,34 @@
         <div class="truck-modal-body">
             <div class="form-row">
                 <label>Client</label>
-                <input type="text" [(ngModel)]="newEmpotage.client" name="client" required />
+                <input type="text" [(ngModel)]="newEmpotage.client" name="client" required placeholder="Ex: Marcus Koné" />
             </div>
 
             <div class="form-row">
-                <label>Type client</label>
-                <input type="text" [(ngModel)]="newEmpotage.clientType" name="clientType" />
-            </div>
-
-            <div class="form-row">
-                <label>Booking</label>
-                <input type="text" [(ngModel)]="newEmpotage.booking" name="booking" required />
+                <label>Numéro de Booking</label>
+                <input type="text" [(ngModel)]="newEmpotage.booking" name="booking" required placeholder="Ex: BK-98213" />
             </div>
 
             <div class="form-row two-cols">
                 <div>
                 <label>Conteneurs</label>
-                <input type="number" min="1" [(ngModel)]="newEmpotage.conteneurs" name="conteneurs" />
+                <input type="number" min="1" [(ngModel)]="newEmpotage.conteneurs" name="conteneurs" required placeholder="NB" />
                 </div>
                 <div>
                 <label>Volume (m³)</label>
-                <input type="number" step="0.1" [(ngModel)]="newEmpotage.volume" name="volume" />
+                <input type="number" step="0.1" [(ngModel)]="newEmpotage.volume" name="volume" required placeholder="m³" />
                 </div>
             </div>
 
             <div class="form-row two-cols">
                 <div>
                 <label>Début</label>
-                <input type="datetime-local" [(ngModel)]="newEmpotage.dateStart" name="dateStart" />
+                <input type="datetime-local" [(ngModel)]="newEmpotage.dateStart" name="dateStart" required />
                 </div>
                 <div>
                 <label>Fin</label>
-                <input type="datetime-local" [(ngModel)]="newEmpotage.dateEnd" name="dateEnd" />
+                <input type="datetime-local" [(ngModel)]="newEmpotage.dateEnd" name="dateEnd" required />
                 </div>
-            </div>
-
-            <div class="form-row">
-                <label>Statut</label>
-                <select [(ngModel)]="newEmpotage.status" name="status">
-                <option value="A venir">A venir</option>
-                <option value="En cours">En cours</option>
-                <option value="Terminé">Terminé</option>
-                </select>
             </div>
         </div>
 
@@ -175,7 +161,6 @@
               <td>
                 <div class="client-info">
                   <strong>{{ item.client }}</strong>
-                  <small>{{ item.clientType }}</small>
                 </div>
               </td>
               <td>
