--- a/FRONT/src/app/admin-empotage/admin-empotage.html
+++ b/FRONT/src/app/admin-empotage/admin-empotage.html
@@ -102,13 +102,13 @@
         </div>
 
         <!-- Client Select -->
-         <div class="select-box">
+         <!-- <div class="select-box">
           <select [(ngModel)]="filters.client" (change)="applyFilters()" class="custom-select">
             <option value="all">Tous les clients</option>
             <option value="cma">CMA CGM</option>
             <option value="maersk">Maersk</option>
           </select>
-         </div>
+         </div> -->
 
         <!-- Date Start -->
         <input 
