--- a/FRONT/src/app/user-dashboard/user-dashboard.html
+++ b/FRONT/src/app/user-dashboard/user-dashboard.html
@@ -40,10 +40,10 @@
       </div>
     </nav>
       <div class="sidebar-footer">
-      <a href="#" class="sidebar-link secondary">
+      <!-- <a href="#" class="sidebar-link secondary">
         <span class="material-symbols-outlined">help</span>
         <span class="link-label">Centre d'aide</span>
-      </a>
+      </a> -->
       <div class="footer-divider"></div>
       <a href="#" class="sidebar-link logout" (click)="$event.preventDefault(); requestLogout()">
         <span class="material-symbols-outlined">logout</span>
