modification pour que les photos apparaissent

--- a/FRONT/src/app/users-manager/users-manager.html
+++ b/FRONT/src/app/users-manager/users-manager.html
@@ -197,7 +197,7 @@
                    <input
                      class="truck-input"
                      type="text"
-                     placeholder="Ex : Jean Dupont"
+                     placeholder="Ex : Paule Yves"
                      [(ngModel)]="formUser.nom"
                      required
                    />
@@ -211,7 +211,7 @@
                    <input
                      class="truck-input"
                      type="text"
-                     placeholder="Ex : jdupont"
+                     placeholder="Ex : pyves"
                      [(ngModel)]="formUser.username"
                      required
                    />
